--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-dark">
+
 <!--NavbarStart-->
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
@@ -73,6 +74,35 @@
   </header>
 <!--NavbarEnd-->
 
+<!--JumbotronStart-->
+<jumbotron></jumbotron>
+<div class="jumbotron">
+  <div class=" jumbotron-container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <div class="d-flex flex-row align-items-center">
+          <h1 class="display-7">TV Shows</h1>
+          <button class="btn jumbotron-btn dropdown-toggle ms-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Genres
+          </button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Drama</a></li>
+            <li><a class="dropdown-item" href="#">Comedy</a></li>
+            <!-- Add more genres as needed -->
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-md-6 text-md-end">
+        <button class="btn btn-outline-light me-2">Grid View</button>
+        <button class="btn btn-outline-light">Line View</button>
+      </div>
+    </div>
+  </div>
+</div>
+</jumbotron>
+<!--JumbotronEnd-->
 
 
 <!--FooterStart-->
@@ -134,16 +164,9 @@
 </footer>
 <!--FooterEnd-->
 
-
-
-
-
-
-
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </body>
 </html>
