--- a/index.html
+++ b/index.html
@@ -75,35 +75,39 @@
 <!--NavbarEnd-->
 
 <!--JumbotronStart-->
-<jumbotron></jumbotron>
-<div class="jumbotron">
-  <div class=" jumbotron-container">
+<jumbotron>
+<div class="jumbotron mx-4">
+  <div class="container-fluid">
     <div class="row align-items-center">
       <div class="col-md-6">
         <div class="d-flex flex-row align-items-center">
-          <h1 class="display-7">TV Shows</h1>
-          <button class="btn jumbotron-btn dropdown-toggle ms-5" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <h1 class="display-7">TV Shows</h1>          
+          <button class="btn jumbotron-btn dropdown-toggle ms-5 " type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Genres
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
             <li><a class="dropdown-item" href="#">Drama</a></li>
+            <li><a class="dropdown-item" href="#">Crime</a></li>
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Fantasy</a></li>
+            <li><a class="dropdown-item" href="#">Biography</a></li>
+            <li><a class="dropdown-item" href="#">Western</a></li>
+            <li><a class="dropdown-item" href="#">Animation</a></li>
             <li><a class="dropdown-item" href="#">Comedy</a></li>
-            <!-- Add more genres as needed -->
-          </ul>
+            <li><a class="dropdown-item" href="#">Sci-Fi</a></li>
+          </ul>        
         </div>
       </div>
-
       <div class="col-md-6 text-md-end">
-        <button class="btn btn-outline-light me-2">Grid View</button>
-        <button class="btn btn-outline-light">Line View</button>
+        <button class="btn btn-outline-light btn__edit"><ion-icon name="reorder-two-outline"></ion-icon></button>
+        <button class="btn btn-outline-light btn__edit"><ion-icon name="grid-outline"></ion-icon></button>
+      
       </div>
     </div>
   </div>
 </div>
 </jumbotron>
 <!--JumbotronEnd-->
-
 
 <!--FooterStart-->
 <footer class="bg-dark text-white py-4">
@@ -164,6 +168,7 @@
 </footer>
 <!--FooterEnd-->
 
+  <script src="./script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
