--- a/index.html
+++ b/index.html
@@ -109,8 +109,13 @@
 </jumbotron>
 <!--JumbotronEnd-->
 
+<!--CarouselsStart-->
+
+<!--CarouselsEnd-->
+
+
 <!--FooterStart-->
-<footer class="bg-dark text-white py-4">
+<footer class="bg-dark text-white py-4 fixed-bottom">
   
   <div class="container w-50">
     
