--- a/index.html
+++ b/index.html
@@ -110,12 +110,49 @@
 <!--JumbotronEnd-->
 
 <!--CarouselsStart-->
-
+<section class="container-fluid">
+<h3 class="display-7 mt-5 mb-3">Trending Now</h3>
+<div id="carousel1" class="carousel slide " data-bs-ride="carousel">
+  <div class="carousel-inner"></div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel1" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel1" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<h3 class="display-7 mt-5 mb-3">Watch It Again</h3>
+<div id="carousel2" class="carousel slide " data-bs-ride="carousel">
+  <div class="carousel-inner"></div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel2" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel2" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+<h3 class="display-7 mt-5 mb-3">New Releases</h3>
+<div id="carousel3" class="carousel slide " data-bs-ride="carousel">
+  <div class="carousel-inner"></div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</section>
 <!--CarouselsEnd-->
 
 
 <!--FooterStart-->
-<footer class="bg-dark text-white py-4 fixed-bottom">
+<footer class="bg-dark text-white py-4 mt-5">
   
   <div class="container w-50">
     
@@ -174,6 +211,7 @@
 <!--FooterEnd-->
 
   <script src="./script.js"></script>
+  <script src="https://unpkg.com/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
