--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
               </div>
             </div>
             <div class="col-md-6 text-md-end btn__div">
-              <button class=" btn-outline-light btn__edit1">
+              <button class="btn-outline-light btn__edit1">
                 <ion-icon name="reorder-two-outline"></ion-icon>
               </button>
-              <button class=" btn-outline-light btn__edit2">
+              <button class="btn-outline-light btn__edit2">
                 <ion-icon name="grid-outline"></ion-icon>
               </button>
             </div>
@@ -308,10 +308,18 @@
     <footer class="bg-dark text-white py-4 mt-5">
       <div class="container w-50">
         <div class="mb-3 social__icons">
-          <a href="https://www.facebook.com/netflix/"><ion-icon name="logo-facebook"></ion-icon></a>
-          <a href="https://www.instagram.com/netflix/"><ion-icon name="logo-instagram"></ion-icon></a>
-          <a href="https://twitter.com/netflix"><ion-icon name="logo-twitter"></ion-icon></a>
-          <a href="https://www.youtube.com/@Netflix"><ion-icon name="logo-youtube"></ion-icon></a>
+          <a href="https://www.facebook.com/netflix/"
+            ><ion-icon name="logo-facebook"></ion-icon
+          ></a>
+          <a href="https://www.instagram.com/netflix/"
+            ><ion-icon name="logo-instagram"></ion-icon
+          ></a>
+          <a href="https://twitter.com/netflix"
+            ><ion-icon name="logo-twitter"></ion-icon
+          ></a>
+          <a href="https://www.youtube.com/@Netflix"
+            ><ion-icon name="logo-youtube"></ion-icon
+          ></a>
         </div>
         <div class="row">
           <div class="col-md mb-2">
